# Personal-blog

./: .gitignore  CLAUDE.md  README.md  index.html  log_tail.py  package-lock.json  package.json  vite.config.js  开发报告.md
article/: movie-2.html  music-1.html  music-2.html  tech-1.html  tech-2.html  tech-4.html
backend/: CMakeLists.txt  main.cpp
config/: articles_movie.json  articles_music.json  articles_tech.json  sections.json
drafts/: bagu_template.md
js/: main.js
public/article/: movie-1.html  tech-3.html  tech-5.html  tech-6.html
sections/: movie.html  music.html  tech.html
src/: App.vue  style.css
src/components/: AppFooter.vue  AppHeader.vue  ArticleContent.vue  ArticleItem.vue  SectionCard.vue
src/composables/: useProgressiveLoader.js
src/router/: index.js
src/services/: api.js
src/utils/: progressiveRenderer.js
src/views/: ArticleView.vue  HomeView.vue  SectionView.vue
